syntax = "proto3";

package product;

option java_multiple_files = true;
option java_package = "org.vinio.product.grpc";
option java_outer_classname = "ProductProto";

service ProductService {
  rpc CreateProduct (Product) returns (ProductResponse);
  rpc GetProduct (ProductRequest) returns (Product);
  rpc GetAllProducts (Empty) returns (ProductList);
  rpc UpdateProduct (Product) returns (ProductResponse);
  rpc DeleteProduct (ProductRequest) returns (ProductResponse);
}

message Product {
  int32 id = 1;
  string name = 2;
  double price = 3;
  string category = 4;
  int32 count = 5;
}

message ProductRequest {
  int32 id = 1;
}

message ProductResponse {
  bool success = 1;
  string message = 2;
}

message ProductList {
  repeated Product products = 1;
}

message Empty {}
